unpackaged/main/default/objects/zkmulti__MCPackageCheckpoint__c/zkmulti__MCPackageCheckpoint__c.object-meta.xml
<CustomObject>
    <label>Package Checkpoint</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Package Checkpoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Checkpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>