unpackaged/main/default/objects/zkmulti__MCPackageCheckpoint__c/fields/zkmulti__Package__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Package__c</fullName>
    <label>Package</label>
    <referenceTo>zkmulti__MCPackage__c</referenceTo>
    <relationshipLabel>Package Checkpoints</relationshipLabel>
    <relationshipName>Package_Checkpoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>