unpackaged/main/default/objects/zkmulti__MCPackageCheckpoint__c/fields/zkmulti__Source__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Source__c</fullName>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>